[package]
name = "jellyfish-merkle-generic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
hex = "0.4.3"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"

# Dependencies for "metrics" feature
prometheus = { version = "0.13.3", default-features = false, optional = true }
once_cell = { version = "1.10.0", optional = true }

# Dependencies for "fuzzing" feature. Also relies on "metrics"
proptest = { version = "1.0.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }
rand = { version = "0.8", features = ["min_const_gen"], optional = true}

# Dependencies for "rayon" feature
rayon = { version = "1.5.2", optional = true }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
rand = { version = "0.8", features = ["min_const_gen"] }
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
prometheus = { version = "0.13.3", default-features = false }
once_cell = "1.10.0" 
rayon =  "1.5.2"
bcs = { git = "https://github.com/aptos-labs/bcs", rev = "2cde3e8446c460cb17b0c1d6bac7e27e964ac169" } # Used to make all serializable types hashable

[features]
default = []
fuzzing = ["dep:proptest", "dep:proptest-derive", "dep:rand"]
metrics = ["dep:prometheus", "dep:once_cell"]
rayon = ["dep:rayon", "dep:once_cell"]
